# RK2

./: CMakeLists.txt  CPackConfig.cmake  CoR.cpp  CoR.h  README.md  main.cpp
.github/workflows/: build.yml  release.yml
tests/: tests.cpp
